apps/base/download-deluge/deploy/web/web-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge-web
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: deluge
      app.kubernetes.io/component: deluge-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deluge
        app.kubernetes.io/component: deluge-web
    spec:
      containers:
      - name: deluge-web
        image: "registry.lan/deluge-web:2.1.1_1.2.14-alpine"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8112
          name: webui
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000 # deluge
          readOnlyRootFilesystem: true
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: webui
          initialDelaySeconds: 3
          periodSeconds: 10
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 128Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: deluge-data
          mountPath: /home/deluge/.config/deluge
          subPath: config
        - name: deluge-auth
          mountPath: /home/deluge/.config/deluge/auth
          subPath: auth
        - name: deluge-web-secret
          mountPath: /home/deluge/.config/deluge/hostlist.conf
          subPath: hostlist.conf
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: deluge-data
        persistentVolumeClaim:
          claimName: deluge-data
      - name: deluge-web-secret
        secret:
          secretName: deluge-web-secret
      - name: deluge-auth
        secret:
          secretName: deluge-auth
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
