apps/base/download-deluge/deploy/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge-web
spec:
  ports:
  - port: 80
    targetPort: webui
    name: webui
  selector:
    app.kubernetes.io/name: deluge
    app.kubernetes.io/component: deluge-web
