apps/base/download-deluge/deploy/web/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge-web
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Download
    gethomepage.dev/name: Deluge
    gethomepage.dev/description: Torrent client
    gethomepage.dev/icon: deluge
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=deluge"
    # https://gethomepage.dev/en/services/deluge/
    gethomepage.dev/widget.type: "deluge"
    gethomepage.dev/widget.url: "http://deluge-web.download-deluge.svc.cluster.local:80"
    gethomepage.dev/widget.fields: '["leech", "download", "seed", "upload"]'
    gethomepage.dev/widget.password: "changeme"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - deluge.dl.intra.web_domain_name
      secretName: ingress-tls
  rules:
  - host: deluge.dl.intra.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge-web
            port:
              name: webui
